--- a/tools/build-system/launchpad/sflphone-plugins/debian/changelog
+++ b/tools/build-system/launchpad/sflphone-plugins/debian/changelog
@@ -1,3 +1,15 @@
+sflphone-plugins (1.1.0-rc20120607~ppa1~SYSTEM) SYSTEM; urgency=low
+
+    ** SNAPSHOT 1.1.0-rc20120607~ppa1~SYSTEM **
+
+  * * #11208: bump version numbers for release 1.1.0
+  * * #9381: use autoconf macros and AC_SEARCH_LIBS
+  * * #9144: Fixes "Only <glib.h> can be included directly" error
+  * #8449: Update version 1.0.2
+  * * #8542: removed trailing whitespace from tree
+
+ -- Julien Bonjean <julien.bonjean@savoirfairelinux.com>  Thu, 07 Jun 2012 16:10:55 -0400
+
 sflphone-plugins (1.0.0-rc20110930~ppa1~SYSTEM) SYSTEM; urgency=low
 
     ** SNAPSHOT 1.0.0-rc20110930~ppa1~SYSTEM **
